[package]
name = "puxbay"
version = "1.0.0"
edition = "2021"
authors = ["Puxbay Team <support@puxbay.com>"]
description = "Official Rust SDK for the Puxbay POS API"
homepage = "https://github.com/puxbay/puxbay-rust"
repository = "https://github.com/puxbay/puxbay-rust"
license = "MIT"
keywords = ["puxbay", "pos", "api", "sdk"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
